<resources>
    <string name="app_name">Cricket Thermometer</string>
    <string name="numofchirps">Number of chirps in 25 seconds</string>
    <string name="calctemp">CALCULATE TEMPERATURE</string>
    <string name="numinthebox">Did you know you can determine the temperature outside by counting the number of chirps the cricket makes? Just count the number of chirps one makes in 25 seconds and place that number in the box below:</string>
    <string name="textview">TextView</string>
    <string name="image_of_a_thermometer">Image of a Thermometer</string>
</resources>